Fixed zoomed in effect on mobile when page loads or reloads... Changed root font-size from 10px to 62.5%

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 :root {
   
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 10px;
+  font-size: 62.5%;
   font-weight: 400;
   line-height: 1.7;
 
@@ -630,8 +630,8 @@ select {
 .full-analytics {
   display: grid;
   grid-template-columns: repeat(3, 35rem);
-  /* grid-template-rows: repeat(2, 35rem); */
-  grid-template-rows: repeat(2, min-content);
+  grid-template-rows: repeat(2, 35rem);
+  /* grid-template-rows: repeat(2, min-content); */
 
   gap: 2rem;
   justify-content: center;
